# course_work_1

./: .env.example  README.md  pyproject.toml
data/: operations.xls
src/: config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
