[tool.poetry]
name = "course-work-1"
version = "0.1.0"
description = "3rd course coursework"
authors = ["Nikita Osipov <Nikittaosipov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.10.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.2"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
line_length = 119

[mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv"
]